Fixed alignment

--- a/chat-site/style.css
+++ b/chat-site/style.css
@@ -232,6 +232,7 @@ form button {
   width: 70%;
   display: flex;
   justify-content: space-around;
+  margin-left: 2em;
 }
 
 #message-text {
